# CCNPy

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
ccnpy/: _CCN.py  __init__.py  _ml_kfold.py  metrics.py
cpp/include/: cc_network.h  cc_sequential.h  ccn_components.h  loss_components.h  loss_constants.h
cpp/src/: cc_network.cpp  cc_sequential.cpp  ccn_components.cpp  loss_components.cpp  wrap_ccn.cpp
